[Kevin] JAX-RS Arborescence
